clusters/talos-cluster/browserless/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: browserless-service
  namespace: browserless
spec:
  selector:
    app: browserless
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
